--- a/_config.yml
+++ b/_config.yml
@@ -7,15 +7,15 @@ logo:             # filename of a logo image that has been placed into your imag
 # url:
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Your Name
+  name: Carolyn Runyon
   avatar: bio-photo.jpg
-  bio: "A brief description of yourself."
-  email: #emailaddress
-  twitter: #username
+  bio: "I am a service-oriented archivist who has been working professionally in libraries and archives for more than 9 years. I currently live in Chattanooga and work for the University of Tennessee at Chattanooga. My research interests and work experiences include digital curation, archival description, and digital libraries."
+  email: carolyn.runyon@gmail.com
+  twitter: carolynfrunyon
   facebook: #username
   instagram: #username
   linkedin: #username
-  github: #username
+  github: carolynfrunyon
   researchgate: #username
   mendeley: #username
   google:
